# cloudops-mcp

./: .editorconfig  .env.example  .gitignore  .gitignore.template  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  common_util.py  config.py  config.toml  logger.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  sample.config.toml  setup.py  test-1.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: ci.yml
app/: __init__.py  main.py  util.py
app/agents/: agent.py
app/agents/aws_expert/: awsexpert_agent.py  callbacks.py  prompt.py
memory/: __init__.py  aimodel.py  chroma_db.py  constants.py  inmem_storage.py  knowledge_base.py  utils.py
scripts/: run_tests.sh  setup_dev.sh
tests/: test_sse_real_transport.py
